vpc-peering/sg.tf
#Security Group of Mumbai Server
resource "aws_security_group" "mum_sg" {
  provider = aws.mumbai
  vpc_id = aws_vpc.mum_vpc.id

  ingress {
    from_port        = -1
    to_port          = -1
    protocol         = "icmp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }


  tags = {
        Name = "ICMP Allow SG"
  }
}


#Security Group of Singapore Server
resource "aws_security_group" "sing_sg" {
  provider = aws.singapore
  vpc_id = aws_vpc.sing_vpc.id

  ingress {
    from_port        = -1
    to_port          = -1
    protocol         = "icmp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
        Name = "ICMP Allow SG"
  }
}
